using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class HashIDs : MonoBehaviour 
{
    public static int enmeyMoveHash = Animator.StringToHash("Move");
    public static int enmeyRunHash = Animator.StringToHash("Run");
    public static int enmeyIdelHash = Animator.StringToHash("Idel");
    public static int enmeyShotHash = Animator.StringToHash("Shot");
}
